--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>joao</title>
-    <link rel="stylesheet" href="./stile.css">
+    <title>viciusf</title>
+<link rel="stylesheet" href="./style.css">
+
 </head>
-
-
 <body>
-<h1>aqui vai ser a logo da empresa</h1>
+<header class="topo">
+    <img src="./coollogo_com-208221363.png" alt="">
+    <ul class="alunos ">
+        <li>vinicius</li>
+        <li>alex</li>
+        <li>joão</li>
+
+    </ul>
+
+</header>
+
 
 
     
