--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <header class="topo">
-    <img src="./coollogo_com-208221363.png" alt="">
+    <img src="./coollogo_com-208221363.png" alt="imagemlogo">
     <ul class="alunos ">
-        <li>vinicius</li>
+        <li>joao</li>
         <li>alex</li>
-        <li>joão</li>
+        <li>vimicius</li>
 
     </ul>
 
