--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>viciusf</title>
+    <title>joao</title>
 <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -14,11 +14,24 @@
     <ul class="alunos ">
         <li>joao</li>
         <li>alex</li>
-        <li>vimicius</li>
+        <li>vinicius</li>
 
     </ul>
-
 </header>
+<section class="texto">
+    <div class="descricao">
+        <h1>Mecânica em geral</h1>
+        <p>A mecânica três fronteira oferece um bom atendimento o senhor clientes, dispolibizando trocas de oléos, alinhamento, balanceamento, suspensão,
+         troca de filtros em geral, ar condicionado.</p>
+         <p>A mecânica contem 3 funcionarios 
+            1°Jao tecnico em alinhamento, assistencia em servicos gerais para caminhoes
+            2° Alex tecnico trocas de oléos, filtros e ar condicionado 
+            3°Vine tecnico balanceamento, assistencia em motores a combustao </p>
+            <p>A mecânica se localiza-se na rua araguai 872 centro de Cascavel paraná </p>
+
+    </div>
+
+</section>
 
 
 
